--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
       /*GLOBAL STYLES*/
       body {
         font-family: calibri;
+        background: #222;
+        color: white;
       }
       a {
         display: block;
@@ -18,7 +20,7 @@
         width: 150px;
         display: inline-block;
         vertical-align: top;
-        background: #cccccc;
+        /*background: #cccccc;*/
         padding: 20px;
         margin: 10px;
       }
