--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
       }
       h1 {
         text-align: center;
-        margin: 0;
+        margin: 20px;
         padding: 10px;
+        font-size: 50px;
       }
       h2 {
         margin: 0 0 20px 0;
@@ -29,6 +30,9 @@
       }
       p {
         text-align: center;
+      }
+      .logo {
+        margin: 20px 0 20px 0;
       }
       
       /*HEADER STYLES*/
@@ -70,7 +74,7 @@
       .swm {
         display: flex;
         justify-content: center;
-        background-color: #ffe6e6;
+        /*background-color: #ffe6e6;*/
       }
       .swm a {
         color: #f00;
@@ -86,7 +90,7 @@
       .nec {
         display: flex;
         justify-content: center;
-        background-color: #e6f2ff;
+        /*background-color: #e6f2ff;*/
       }
       .nec .cell-market{
         color: #000;
@@ -108,11 +112,145 @@
   <!--https://rvass82.github.io/presentation/-->
   <body>
     <div class="header">
-      <h1>Presentation Schedules</h1>
+      <h1>NPC Presentation Schedules</h1>
     </div>
+    <section class="nec">  
+      <div class="column" id="90">
+        <div class="logo"><img src="9-logo.png"></div>
+        <div class="cell">
+          <a href="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=2&name=SYD-NINE&start=1" 
+            title="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=2&name=SYD-NINE&start=1" 
+            target="_blank">Sydney 9</a>
+        </div>
+        <div class="cell">
+          <a href="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=5&name=MEL-NINE&start=1" 
+            title="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=5&name=MEL-NINE&start=1" 
+            target="_blank">Melbourne 9</a>
+        </div>
+        <div class="cell">
+          <a href="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=11&name=BRI-NINE&start=1" 
+            title="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=11&name=BRI-NINE&start=1" 
+            target="_blank">Brisbane 9</a>
+        </div>
+        <div class="cell">
+          <a href="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=14&name=GCO-NINE&start=1" 
+            title="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=14&name=GCO-NINE&start=1" 
+            target="_blank">GoldCoast 9</a>
+        </div>
+        <div class="cell">
+          <a href="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=8&name=DAR-NINE&start=1" 
+            title="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=8&name=DAR-NINE&start=1" 
+            target="_blank">Darwin 9</a>
+        </div>
+        <div class="cell">
+          <a href="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=20&name=ADE-NINE&start=1" 
+            title="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=20&name=ADE-NINE&start=1" 
+            target="_blank">Adelaide 9</a>
+        </div>
+        <div class="cell">
+          <a href="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=23&name=PER-NINE&start=1" 
+            title="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=23&name=PER-NINE&start=1" 
+            target="_blank">Perth 9</a>
+          </div>
+        </div>
+      <div class="column" id="Gem">
+        <div class="logo"><img src="gem-logo.png"></div>
+        <div class="cell">
+          <a href="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=1&name=SYD-GEM&start=1" 
+            title="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=1&name=SYD-GEM&start=1" 
+            target="_blank">Sydney Gem</a>
+        </div>
+        <div class="cell">
+          <a href="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=4&name=MEL-GEM&start=1" 
+            title="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=4&name=MEL-GEM&start=1" 
+            target="_blank">Melbourne Gem</a>
+        </div>
+        <div class="cell">
+          <a href="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=10&name=BRI-GEM&start=1" 
+            title="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=10&name=BRI-GEM&start=1" 
+            target="_blank">Brisbane Gem</a>
+        </div>
+        <div class="cell">
+          <a href="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=7&name=DAR-GEM&start=1" 
+            title="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=7&name=DAR-GEM&start=1" 
+            target="_blank">Darwin Gem</a>
+        </div>
+        <div class="cell">
+          <a href="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=19&name=ADE-GEM&start=1" 
+            title="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=19&name=ADE-GEM&start=1" 
+            target="_blank">Adelaide Gem</a>
+        </div>
+        <div class="cell">
+          <a href="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=22&name=PER-GEM&start=1" 
+            title="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=22&name=PER-GEM&start=1" 
+            target="_blank">Perth Gem</a>
+        </div>
+      </div>
+      <div class="column" id="Go!">
+        <div class="logo"><img src="go-logo.png"></div>
+        <div class="cell">
+          <a href="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=3&name=SYD-GO&start=1" 
+            title="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=3&name=SYD-GO&start=1" 
+            target="_blank">Sydney Go!</a>
+        </div>
+        <div class="cell">
+          <a href="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=6&name=MEL-GO&start=1" 
+            title="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=6&name=MEL-GO&start=1" 
+            target="_blank">Melbourne Go!</a>
+        </div>
+        <div class="cell">
+          <a href="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=12&name=BRI-GO&start=1" 
+            title="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=12&name=BRI-GO&start=1" 
+            target="_blank">Brisbane Go!</a>
+        </div>
+        <div class="cell">
+          <a href="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=9&name=DAR-GO&start=1" 
+            title="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=9&name=DAR-GO&start=1" 
+            target="_blank">Darwin Go!</a>
+        </div>
+        <div class="cell">
+          <a href="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=21&name=ADE-GO&start=1" 
+            title="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=21&name=ADE-GO&start=1" 
+            target="_blank">Adelaide Go!</a>
+        </div>
+        <div class="cell">
+          <a href="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=24&name=PER-GO&start=1" 
+            title="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=24&name=PER-GO&start=1" 
+            target="_blank">Perth Go!</a>
+        </div>
+      </div>
+      <div class="column" id="Life">
+        <div class="logo"><img src="life-logo.png"></div>
+        <div class="cell">
+          <a href="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=25&name=SYD-LIFE&start=1" 
+            title="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=25&name=SYD-LIFE&start=1" 
+            target="_blank">Sydney Life</a>
+        </div>
+        <div class="cell">
+          <a href="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=26&name=MEL-LIFE&start=1" 
+            title="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=26&name=MEL-LIFE&start=1" 
+            target="_blank">Melbourne Life</a>
+        </div>
+        <div class="cell">
+          <a href="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=28&name=BRI-LIFE&start=1" 
+            title="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=28&name=BRI-LIFE&start=1" 
+            target="_blank">Brisbane Life</a>
+        </div>
+        <div class="cell">
+          <a href="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=31&name=ADE-LIFE&start=1" 
+            title="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=31&name=ADE-LIFE&start=1" 
+            target="_blank">Adelaide Life</a>
+        </div>
+        <div class="cell">
+          <a href="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=32&name=PER-LIFE&start=1" 
+            title="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=32&name=PER-LIFE&start=1" 
+            target="_blank">Perth Life</a>
+        </div>
+      </div>   
+    </section>    
     <section class="swm">  
       <div class="column" id="77">
-        <h2>7</h2>
+        <div class="logo"><img src="7-logo.png"></div>
         <div class="cell">
           <div class="cell-market">Sydney</div>
           <div class="cell-link">
@@ -199,7 +337,7 @@
         </div>
       </div>
       <div class="column" id="72">
-        <h2>7Two</h2>
+        <div class="logo"><img src="7two-logo.png"></div>
         <div class="cell">
           <div class="cell-market">Sydney</div>
           <div class="cell-link">
@@ -281,7 +419,7 @@
         </div>
       </div>
       <div class="column" id="7mate">
-        <h2>7Mate</h2>
+        <div class="logo"><img src="7mate-logo.png"></div>
         <div class="cell">
           <div class="cell-market">Sydney</div>
           <div class="cell-link">
@@ -361,7 +499,7 @@
         </div>
       </div>
       <div class="column" id="7food">
-        <h2>7Food</h2>
+        <div class="logo"><img src="7food-logo.png"></div>
         <div class="cell">
           <div class="cell-market">Sydney</div>
           <div class="cell-link">
@@ -406,7 +544,7 @@
         </div>
       </div>
       <div class="column" id="7flix">
-        <h2>7Flix</h2>
+        <div class="logo"><img src="7flix-logo.png"></div>
         <div class="cell">
           <div class="cell-market">Sydney</div>
           <div class="cell-link">
@@ -450,140 +588,6 @@
           </div>
         </div>
       </div>      
-    </section><br>
-    <section class="nec">  
-      <div class="column" id="90">
-        <h2>9</h2>
-        <div class="cell">
-          <a href="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=2&name=SYD-NINE&start=1" 
-            title="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=2&name=SYD-NINE&start=1" 
-            target="_blank">Sydney 9</a>
-        </div>
-        <div class="cell">
-          <a href="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=5&name=MEL-NINE&start=1" 
-            title="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=5&name=MEL-NINE&start=1" 
-            target="_blank">Melbourne 9</a>
-        </div>
-        <div class="cell">
-          <a href="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=11&name=BRI-NINE&start=1" 
-            title="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=11&name=BRI-NINE&start=1" 
-            target="_blank">Brisbane 9</a>
-        </div>
-        <div class="cell">
-          <a href="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=14&name=GCO-NINE&start=1" 
-            title="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=14&name=GCO-NINE&start=1" 
-            target="_blank">GoldCoast 9</a>
-        </div>
-        <div class="cell">
-          <a href="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=8&name=DAR-NINE&start=1" 
-            title="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=8&name=DAR-NINE&start=1" 
-            target="_blank">Darwin 9</a>
-        </div>
-        <div class="cell">
-          <a href="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=20&name=ADE-NINE&start=1" 
-            title="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=20&name=ADE-NINE&start=1" 
-            target="_blank">Adelaide 9</a>
-        </div>
-        <div class="cell">
-          <a href="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=23&name=PER-NINE&start=1" 
-            title="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=23&name=PER-NINE&start=1" 
-            target="_blank">Perth 9</a>
-          </div>
-        </div>
-      <div class="column" id="Gem">
-        <h2>Gem</h2>
-        <div class="cell">
-          <a href="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=1&name=SYD-GEM&start=1" 
-            title="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=1&name=SYD-GEM&start=1" 
-            target="_blank">Sydney Gem</a>
-        </div>
-        <div class="cell">
-          <a href="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=4&name=MEL-GEM&start=1" 
-            title="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=4&name=MEL-GEM&start=1" 
-            target="_blank">Melbourne Gem</a>
-        </div>
-        <div class="cell">
-          <a href="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=10&name=BRI-GEM&start=1" 
-            title="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=10&name=BRI-GEM&start=1" 
-            target="_blank">Brisbane Gem</a>
-        </div><br>
-        <div class="cell">
-          <a href="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=7&name=DAR-GEM&start=1" 
-            title="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=7&name=DAR-GEM&start=1" 
-            target="_blank">Darwin Gem</a>
-        </div>
-        <div class="cell">
-          <a href="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=19&name=ADE-GEM&start=1" 
-            title="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=19&name=ADE-GEM&start=1" 
-            target="_blank">Adelaide Gem</a>
-        </div>
-        <div class="cell">
-          <a href="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=22&name=PER-GEM&start=1" 
-            title="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=22&name=PER-GEM&start=1" 
-            target="_blank">Perth Gem</a>
-        </div>
-      </div>
-      <div class="column" id="Go!">
-        <h2>Go!</h2>
-        <div class="cell">
-          <a href="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=3&name=SYD-GO&start=1" 
-            title="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=3&name=SYD-GO&start=1" 
-            target="_blank">Sydney Go!</a>
-        </div>
-        <div class="cell">
-          <a href="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=6&name=MEL-GO&start=1" 
-            title="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=6&name=MEL-GO&start=1" 
-            target="_blank">Melbourne Go!</a>
-        </div>
-        <div class="cell">
-          <a href="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=12&name=BRI-GO&start=1" 
-            title="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=12&name=BRI-GO&start=1" 
-            target="_blank">Brisbane Go!</a>
-        </div><br>
-        <div class="cell">
-          <a href="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=9&name=DAR-GO&start=1" 
-            title="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=9&name=DAR-GO&start=1" 
-            target="_blank">Darwin Go!</a>
-        </div>
-        <div class="cell">
-          <a href="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=21&name=ADE-GO&start=1" 
-            title="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=21&name=ADE-GO&start=1" 
-            target="_blank">Adelaide Go!</a>
-        </div>
-        <div class="cell">
-          <a href="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=24&name=PER-GO&start=1" 
-            title="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=24&name=PER-GO&start=1" 
-            target="_blank">Perth Go!</a>
-        </div>
-      </div>
-      <div class="column" id="Life">
-        <h2>Life</h2>
-        <div class="cell">
-          <a href="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=25&name=SYD-LIFE&start=1" 
-            title="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=25&name=SYD-LIFE&start=1" 
-            target="_blank">Sydney Life</a>
-        </div>
-        <div class="cell">
-          <a href="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=26&name=MEL-LIFE&start=1" 
-            title="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=26&name=MEL-LIFE&start=1" 
-            target="_blank">Melbourne Life</a>
-        </div>
-        <div class="cell">
-          <a href="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=28&name=BRI-LIFE&start=1" 
-            title="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=28&name=BRI-LIFE&start=1" 
-            target="_blank">Brisbane Life</a>
-        </div><br><br>
-        <div class="cell">
-          <a href="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=31&name=ADE-LIFE&start=1" 
-            title="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=31&name=ADE-LIFE&start=1" 
-            target="_blank">Adelaide Life</a>
-        </div>
-        <div class="cell">
-          <a href="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=32&name=PER-LIFE&start=1" 
-            title="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=32&name=PER-LIFE&start=1" 
-            target="_blank">Perth Life</a>
-        </div>
-      </div>   
     </section>
   </body>
 </html>
